Creating my first class
class name: UPositionReport

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BA75C77C4755CDFEBC1D00813CB740C4
+CompanyName=xmax studios
+CompanyDistinguishedName=xmax
+CopyrightNotice=Copyright Kevin Jakubauskas 2017
 
 [StartupActions]
 bAddPacks=True
